feat(domain): implement multiple drivers in trip